@startuml Univmar_Lead_Intake
title Univmar V1 — Website Lead Intake & Conversion
left to right direction

skinparam dpi 170
skinparam backgroundColor white
skinparam shadowing false
skinparam roundcorner 8
skinparam linetype ortho
skinparam nodesep 34
skinparam ranksep 42
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam packageStyle rectangle
skinparam packageTitleAlignment center

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #64748B
  ArrowColor #64748B
  FontColor #0F172A
}

skinparam package {
  BackgroundColor #F8FAFC
  BorderColor #CBD5E1
  FontColor #0F172A
}

hide methods
hide empty members


class WebsiteQuoteRequest {
  +id: Long
  +name: String
  +email: String
  +phone: String?
  +message: Text
  +status: WebsiteLeadStatus
  +convertedAt: Instant?
  +createdAt: Instant
  +updatedAt: Instant
}

class CustomerProfile {
  +id: Long
  +customerType: CustomerType
  +firstName: String?
  +lastName: String?
  +companyName: String?
  +phone: String?
}

class QuoteRequest {
  +id: Long
  +reference: String
  +status: QuoteRequestStatus
  +notes: Text?
  +submittedAt: Instant?
}

WebsiteQuoteRequest "0..1" --> "0..1" CustomerProfile : converted customer
WebsiteQuoteRequest "0..1" --> "0..1" QuoteRequest : converted RFQ
CustomerProfile "1" --> "0..*" QuoteRequest : requests

note bottom of WebsiteQuoteRequest
  Status flow:
  NEW → CONTACTED → QUALIFIED → CONVERTED
                         ↘ REJECTED
end note
@enduml
